deployment_kubectl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
spec:
  replicas: 1  # Number of desired replicas
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: webapp-container
        image: backend_java-webapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80  # Port your application listens on


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
spec:
  replicas: 1  # Number of desired replicas
  selector:
    matchLabels:
      app: eureka-app
  template:
    metadata:
      labels:
        app: eureka-app
    spec:
      containers:
      - name: eureka-container
        image: backend_java-eureka:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80  # Port your application listens on
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1  # Number of desired replicas
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
      - name: gateway-container
        image: backend_java-gateway:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80  # Port your application listens on
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        hostPath:
          path: /home/raul-manendez/mysql # Replace with the actual path on your host machine

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
spec:
  replicas: 2  # Number of desired replicas
  selector:
    matchLabels:
      app: department-app
  template:
    metadata:
      labels:
        app: department-app
    spec:
      containers:
      - name: department-container
        image: backend_java-department-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80  # Port your application listens on
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: designation
spec:
  replicas: 2  # Number of desired replicas
  selector:
    matchLabels:
      app: designation-app
  template:
    metadata:
      labels:
        app: designation-app
    spec:
      containers:
      - name: designation-container
        image: backend_java-designation-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80  # Port your application listens on
