services_kubectl.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 32200
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-app
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 32100
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32000
  type: NodePort


---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: department-service
spec:
  selector:
    app: department-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: designation-service
spec:
  selector:
    app: designation-app
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
